--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-chessboard": "^4.6.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@types/chessboardjs": "^0.3.5",
