--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.6",
+    "@heroicons/react": "^2.1.5",
     "chess.js": "^1.0.0-beta.8",
     "chessboardjs": "^0.0.1",
     "jquery": "^3.7.1",
