--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.6",
     "@heroicons/react": "^2.1.5",
+    "@tailwindcss/forms": "^0.5.9",
     "chess.js": "^1.0.0-beta.8",
     "chessboardjs": "^0.0.1",
     "jquery": "^3.7.1",
